Fix white fonts on dark mode, enforce light mode and black fonts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,9 +7,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color-scheme: light only;
+  color: #000000;
+  background-color: #F3F3F3;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,11 +32,14 @@ body {
   min-height: 100vh;
   width: 100vw;
   height: 100vh;
+  background: #F3F3F3;
+  color: #000000;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #000000;
 }
 
 button {
@@ -46,7 +49,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background: #F3F3F3;
+  color: #000000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -58,7 +62,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -69,4 +73,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
